--- a/src/GMLClient/frontClient/src/gml.css
+++ b/src/GMLClient/frontClient/src/gml.css
@@ -98,3 +98,16 @@ span .layui-icon-about:hover{
 .strategyListItem_bottom{
     clear: both;
 }
+
+.gml-form-label {
+    display: block;
+    padding: 9px 40px;
+    width: 450px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+}
+.gml-input-block{
+    margin-left: 40px;
+    min-height: 36px;
+}
